kubernetes/apps/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: app
          image: syncthing/syncthing:2.1.6 # {"$imagepolicy": "apps:syncthing"}
          command: ["/bin/syncthing"]
          ports:
            - containerPort: 8384
              protocol: TCP
            - containerPort: 22000
              protocol: TCP
            - containerPort: 22000
              protocol: UDP
            - containerPort: 21027
              protocol: UDP
          volumeMounts:
            - mountPath: /var/syncthing/config
              name: data
            - mountPath: /sync
              name: sync
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data-pvc
        - name: sync
          persistentVolumeClaim:
            claimName: syncthing-pvc
