kubernetes/apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: syncthing-web
      protocol: TCP
      port: 8384
    - name: syncthing-tcp
      protocol: TCP
      port: 22000
    - name: syncthing-udp
      protocol: UDP
      port: 22000
    - name: syncthing-lan
      protocol: UDP
      port: 21027
